--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -35,12 +35,10 @@
         <div class="container-narrow">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
           <ul class="nav">
-              <li><a href="{{ BASE_PATH }}/pages/about.html">about</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/pubs.html">publications</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/talks.html">talks</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/software.html">software</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/teaching.html">teaching</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/tutorials.html">tutorials</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/expers.html">Experiences</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/pubs.html">Publications</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/projects.html">Projects</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/blogs.html">Blogs</a></li>
           </ul>
         </div>
       </div>
